[project]
name = "orchestrators-tests"
version = "0.1.0"
description = "Benchmark comparison of Apache Airflow, Dagster, and Prefect"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    # Core - minimal dependencies for orchestrator testing
    "psycopg2-binary",
    "requests",
    
    # Orchestrators
    "apache-airflow[postgres]",
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "prefect",
    "prefect-sqlalchemy",
    
    # Testing & Benchmarking
    "pytest",
    "pytest-benchmark",
    
    # Results analysis and visualization
    "pandas",
    "matplotlib",
    "seaborn",
    
    # Development
    "ruff",
]

k8s = [
    "kubernetes",
    "prometheus-client",
]